@@ -36,7 +36,7 @@
 #else	/* not _WINDOWS */
 
 #	define ZBX_MUTEX		int
-#	define ZBX_MUTEX_NULL		0
+#	define ZBX_MUTEX_NULL		-1
 
 #	define ZBX_MUTEX_ERROR		-1
 #	define ZBX_MUTEX_OK		1
