@@ -50,7 +50,7 @@ static int			shm_id;
 #	define	LOCK_SM		zbx_mutex_lock(&sm_lock)
 #	define	UNLOCK_SM	zbx_mutex_unlock(&sm_lock)
 
-static ZBX_MUTEX	sm_lock;
+static ZBX_MUTEX	sm_lock = ZBX_MUTEX_NULL;
 #endif
 
 extern char	*CONFIG_FILE;
